[package]
name = "arcconfig"
description = "Facilitates querying of digital video game archives"
version = "0.2.0"
repository = "https://github.com/massivebird/arcconfig"
license-file = "LICENSE"
readme = "README.md"
categories = ["config", "filesystem", "command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
yaml-rust = "0.4.5"
